--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
             <div class="wrapper">
               <div class="box header">
-                <img src="https://www.capitalfm.co.ke/thesauce/files/2020/06/Kanye-West-cropped.jpg" alt="Picture of artist Kanye West" title="Picture of artist Kanye West" />
+                <img src="https://media1.popsugar-assets.com/files/thumbor/yW68yFSsllTeUJIo1JAcjudqueM/249x163:2149x2063/fit-in/1200x630/filters:format_auto-!!-:strip_icc-!!-/2020/02/24/905/n/1922398/d9c250fc5e5435738e0e78.04534326_/i/Kanye-West.jpg" alt="Picture of artist Kanye West" title="Picture of artist Kanye West" />
               </div>
               <div class="content">Kanye West</div>
               <div class="sidebar">favorite songs <br />- <br />Heard 'Em Say, Runaway, Violent Crimes </div>
