--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css?family=Anton%7CBaskervville%7CRaleway&display=swap" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/32afb759be.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/32afb759be.js" crossorigin="anonymous" defer async></script>
   <title>Michael A. Interests</title>
 </head>
 
@@ -66,7 +66,7 @@
           </p>
           <div class="grid">
             <div class="wrapper">
-              <div class="box header">
+              <div class="header">
                 <img src="https://upload.wikimedia.org/wikipedia/en/d/da/This_is_the_cover_art_for_CARE_FOR_ME_by_Saba._The_cover_art_copyright_is_believed_to_belong_to_the_label%2C_Saba_PIVOT%2C_or_the_graphic_artist%28s%29.jpg" alt="Cover art for CARE FOR ME by Saba" title="Cover art for CARE FOR ME by Saba" />
               </div>
               <div class="content">CARE FOR ME, 2018 <br />by Saba</div>
@@ -109,21 +109,21 @@
           </p>
           <div class="grid">
             <div class="wrapper">
-              <div class="box header">
+              <div class="header">
                 <img src="https://www.motownrecords.com/files/2022/05/Smino-Grid.jpg" alt="Picture of artist Smino" title="Picture of artist Smino" />
               </div>
               <div class="content"> Smino</div>
               <div class="sidebar">favorite songs <br />- <br />Kompany, Oxygen, Runnin</div>
             </div>
             <div class="wrapper">
-              <div class="box header">
+              <div class="header">
                 <img src="https://i.guim.co.uk/img/media/d67ee6e706a6e2501f79f539fdbeabcdf4e34f94/93_0_2498_1500/master/2498.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=35f3cccb148d7ba75936b6416f110cb9" alt="Picture of artist Mac Miller" title="Picture of artist Mac Miller" />
               </div>
               <div class="content">Mac Miller</div>
               <div class="sidebar">favorite songs <br />- <br />Hand Me Downs, Fight the Feeling, Doors</div>
             </div>
             <div class="wrapper">
-              <div class="box header">
+              <div class="header">
                 <img src="https://media1.popsugar-assets.com/files/thumbor/yW68yFSsllTeUJIo1JAcjudqueM/249x163:2149x2063/fit-in/1200x630/filters:format_auto-!!-:strip_icc-!!-/2020/02/24/905/n/1922398/d9c250fc5e5435738e0e78.04534326_/i/Kanye-West.jpg" alt="Picture of artist Kanye West" title="Picture of artist Kanye West" />
               </div>
               <div class="content">Kanye West</div>
@@ -139,22 +139,22 @@
         </p>
         <div class="grid">
           <div class="wrapper">
-            <div class="box header">
-              <img src="https://cdn.myanimelist.net/images/anime/10/47347.jpg" alt="Art for the anime Attack on Titan" title="Art for the anime Attack on Titan" />
+            <div class="header">
+              <img src="https://fwcdn.pl/fpo/62/27/636227/7548140.3.jpg" alt="Art for the anime Attack on Titan" title="Art for the anime Attack on Titan" />
             </div>
             <div class="content">Attack on Titan<br /> 2013</div>
             <div class="sidebar">favorite character <br />- <br />Erwin Smith</div>
           </div>
           <div class="wrapper">
-            <div class="box header">
-              <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/48/Samurai_Champloo_key_art.jpg/220px-Samurai_Champloo_key_art.jpg" alt="Art for the anime Samurai Champloo" title="Art for the anime Samurai Champloo" />
+            <div class="header">
+              <img src="https://upload.wikimedia.org/wikipedia/en/4/48/Samurai_Champloo_key_art.jpg" title="Art for the anime Samurai Champloo" />
             </div>
             <div class="content">Samurai Champloo<br /> 2004</div>
             <div class="sidebar">favorite characters <br />- <br />Jin & Mugen</div>
           </div>
           <div class="wrapper">
-            <div class="box header">
-              <img src="https://m.media-amazon.com/images/M/MV5BMGU1OWFjNGMtZTVkNS00NDcxLWI0YmEtMDgxYjBmMDdlNTRkXkEyXkFqcGdeQXVyNjAwNDUxODI@._V1_.jpg" alt="Art for the anime Hunter x Hunter" title="Art for the anime Hunter x Hunter" />
+            <div class="header">
+              <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/7lP5kn1VxJ0SYHsGKB1WijMb4fY.jpg" title="Art for the anime Hunter x Hunter(1999)" />
             </div>
             <div class="content">Hunter x Hunter<br /> 1999</div>
             <div class="sidebar">favorite characters <br />- <br />Chrollo & Kurapika</div>
@@ -169,7 +169,7 @@
           </p>
           <div class="grid">
             <div class="wrapper">
-              <div class="box header">
+              <div class="header">
                 <img src="https://upload.wikimedia.org/wikipedia/en/2/2e/Inception_%282010%29_theatrical_poster.jpg" alt="Poster art for the movie Inception" title="Poster art for the movie Inception" />
               </div>
               <div class="content">Inception<br /> 2010</div>
@@ -194,7 +194,7 @@
           <div class="grid">
             <div class="wrapper">
               <div class="box header">
-                <img src="https://flxt.tmsimg.com/assets/p10681445_b_v10_ab.jpg" alt="Art for the tv animated show The Boondocks" title="Art for the tv animated show The Boondocks" />
+                <img src="https://i5.walmartimages.com/asr/e01ad504-92da-4d39-adda-31a4b97e4150.1273bbeca7d08c603dd4e859a5b45c0d.jpeg" alt="Art for the tv animated show The Boondocks" title="Art for the tv animated show The Boondocks" />
               </div>
               <div class="content">The Boondocks<br /> 2005</div>
               <div class="sidebar">favorite character <br />- <br />Riley</div>
@@ -223,26 +223,26 @@
         </p>
         <div class="grid">
           <div class="wrapper">
-            <div class="box header">
-              <img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/34/Fallout_New_Vegas.jpg/220px-Fallout_New_Vegas.jpg" alt="Video game cover for Fallout: New Vegas" title="Video game cover for Fallout: New Vegas" />
+            <div class="header">
+              <img src="https://howlongtobeat.com/games/Fallout_New_Vegas.jpg" title="Video game cover for Fallout: New Vegas" />
             </div>
             <div class="content">Fallout: New Vegas<br /> 2010</div>
           </div>
           <div class="wrapper">
-            <div class="box header">
-              <img src="https://upload.wikimedia.org/wikipedia/en/6/6e/Sekiro_art.jpg" alt="Video game cover for Sekiro: Shadows Die Twice" title="Video game cover for Sekiro: Shadows Die Twice" />
+            <div class="header">
+              <img src="https://swapcloudgames.com/cdn/shop/products/cc735352db842232a33b3d1edd26f8f6.png?v=1621279377" title="Video game cover for Sekiro: Shadows Die Twice" />
             </div>
             <div class="content">Sekiro: Shadows Die Twice<br /> 2019</div>
           </div>
           <div class="wrapper">
-            <div class="box header">
-              <img src="https://store-images.s-microsoft.com/image/apps.24212.71827372323164480.6e97c7d2-899a-404f-8660-d622a7fc9162.daea9ed5-4921-45a6-a188-637bfab7176c?w=180&h=270&q=60" alt="Video game cover for DARK SOULS III" title="Video game cover for DARK SOULS III" />
+            <div class="header">
+              <img src="https://howlongtobeat.com/games/Dark_souls_3_cover_art.jpg" alt="Video game cover for DARK SOULS III" title="Video game cover for DARK SOULS III" />
             </div>
             <div class="content">DARK SOULS III<br /> 2016</div>
           </div>
           <div class="wrapper">
-            <div class="box header">
-              <img src="https://upload.wikimedia.org/wikipedia/en/f/f4/Hotline_Miami_cover.png" alt="Video game cover for Hotline Miami" title="Video game cover for Hotline Miami" />
+            <div class="header">
+              <img src="https://m.media-amazon.com/images/M/MV5BYWMyODJiNzUtZjI1NC00YTNhLWE4OTUtZDc3YjQ5NTU5MmM2XkEyXkFqcGdeQXVyMTg2NzgzMDE@._V1_FMjpg_UX1000_.jpg" alt="Video game cover for Hotline Miami" title="Video game cover for Hotline Miami" />
             </div>
             <div class="content">Hotline Miami<br /> 2012</div>
           </div>
